main.css
* {
  margin:0;
  padding:0;
}

body {
  font:15px/1.3 'Open Sans', sans-serif;
  color: #5e5b64;
  text-align:center;
  padding: 1em;
}

section, footer, header, aside, nav {
  display: block;
  margin: 2em auto;
}

a {
  background-color:#cccc33;

  background-image:-webkit-linear-gradient(top, #cccc33, #cccc66);
  background-image:-moz-linear-gradient(top, #cccc33, #cccc66);
  background-image:linear-gradient(top, #cccc33, #cccc66);

  box-shadow: 0 1px 1px #ccc;
  border-radius: 2px;

  display: inline-block;
  cursor: pointer;

  padding: 10px;
  margin: 1em auto;
  position:relative;
  text-align:right;
  line-height: 1;
}

#gameBoard {
  list-style: none;
}

#gameBoard .card {
  width: 175px;
  height: 175px;

  display: inline-block;

  margin: 10px;

  border-radius:10px;
  overflow: hidden;
}

#gameBoard .card {
  box-shadow: 0 1px 1px #ccc;

  background: rgba(204,204,51,1);

  background-repeat: no-repeat;
  background-image: url('lilly-avatar.png');
  background-position: center center;
  background-size: 120px 120px;
}

#gameBoard .card.paired {
  box-shadow: none;
  background: rgba(204,204,51,0.2);
}

#gameBoard .card div,
#gameBoard .card img {
  width: 100%;
  height: 100%;
}

#gameBoard .card div {
  background-image: linear-gradient(90deg, rgba(255,255,255,.2) 50%, transparent 50%),
  linear-gradient(rgba(255,255,255,.2)  50%, transparent 50%);
  background-size:50px 50px;
}

